feat: add settings persistence, fix logo resource, and revamp README

--- a/AudioRichPresenceUI/AudioRichPresenceUI.csproj
+++ b/AudioRichPresenceUI/AudioRichPresenceUI.csproj
@@ -9,4 +9,11 @@
     <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Resource Include="logo.png" />
+    <None Update="logo.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
